# personal_tutor

./: .gitignore  CLAUDE.md  Growth_Sprint_Tracker_2026.xlsx  Personal_Growth_Sprint_2026.docx  README.md  gen_plan.js  gen_tracker.py  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/agents/: staff-backend-dev.md  staff-build-error-resolver.md  staff-code-reviewer.md  staff-frontend-dev.md  staff-planner.md  staff-product-manager.md  staff-qa-testing-engineer.md  staff-researcher.md  staff-security-reviewer.md  staff-tdd-guide.md
.claude/commands/: add-feature.md  refactor-clean.md  run-tests.md  stack-status.md  update-skills.md
scripts/: generate_icons.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: anthropic.rs  google.rs  mod.rs  ollama.rs  openrouter.rs  provider.rs
src-tauri/src/commands/: activation.rs  ai.rs  analytics.rs  commitments.rs  connections.rs  conversations.rs  depth.rs  digest.rs  gaps.rs  listen.rs  mastery.rs  mod.rs  progress.rs  rebalance.rs  review.rs  schedule.rs  source.rs  streak.rs  summaries.rs  sync_server.rs  voice.rs
src-tauri/src/db/: mod.rs
src/components/: SummaryCard.tsx
src/data/: pillarConnections.ts  plan.ts  types.ts
src/hooks/: useAI.ts  useActivationQuiz.ts  useAnalytics.ts  useCommitmentReminders.ts  useCommitments.ts  useConnections.ts  useConversations.ts  useDepthScore.ts  useDrift.ts  useListenMode.ts  (+13 more)
(+71 files in other folders)
