[package]
name = "personal-tutor"
version = "0.1.0"
edition = "2021"

[lib]
name = "personal_tutor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
base64 = "0.22"

[target.'cfg(not(target_os = "android"))'.dependencies]
# whisper.cpp via FFI — desktop only (requires cmake + C++ toolchain)
whisper-rs = { version = "0.14", features = [] }
# sherpa-onnx STT — prebuilt libs only available for desktop targets
sherpa-onnx = "1.10"
